compiler/typ/tests/fixtures/diagnostics/0934_gadt_eval_bool_branch_mismatch_08.ml.infer.expected
File "0934_gadt_eval_bool_branch_mismatch_08.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0934_gadt_eval_bool_branch_mismatch_08 is not a valid module name.

File "0934_gadt_eval_bool_branch_mismatch_08.ml", line 7, characters 20-21:
7 |   | Bool_theta b -> 7
                        ^
Error: The constant 7 has type int but an expression was expected of type
         a = bool
